[tool.poetry]
name = "ragtutor"
version = "0.1.0"
description = "Alejandro rag project"
authors = ["AlexHagemeister <hagemeister.alex@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
